--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     },
     "dependencies": {
         "bootstrap": "^5.3.0-alpha1",
+        "codemirror": "^6.0.1",
         "cookie-parser": "~1.4.4",
         "debug": "~2.6.9",
         "dotenv": "^16.0.3",
         "express": "~4.16.1",
+        "fontawesome": "^5.6.3",
         "http-errors": "~1.6.3",
         "joi": "^17.7.0",
+        "jquery": "^3.6.3",
         "mongoose": "^6.8.2",
         "morgan": "~1.9.1",
         "node-sass-middleware": "1.0.1",
